fix overflow-x

--- a/src/styles.css
+++ b/src/styles.css
@@ -233,6 +233,7 @@ canvas {
     display: block;
     max-width: inherit;
     max-height: inherit;
+    width: 100% !important;
     height: unset !important;
 }
 
@@ -248,6 +249,10 @@ canvas {
 
 .head-spacer {
     height: 90px;
+}
+
+video {
+    width: 100%;
 }
 
 @media screen and (min-width: 1720px) {
